<resources>
    <string name="app_name" translatable="false">eCommerceTemplate</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="home_cart">Cart</string>
    <string name="home_orders">Orders</string>
    <string name="home_search">Search</string>
    <string name="home_category">Categories</string>
    <string name="home_settings">Settings</string>
    <string name="home_logout">Logout</string>
    <string name="title_activity_seller_home" translatable="false">SellerHomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_add">Add</string>
    <string name="title_logout">Logout</string>
    <string name="approve_new_products">Approve New Products</string>
    <string name="product_price">Product Price</string>
    <string name="product_description">Product Description</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="delete_product">Delete Product</string>
    <string name="welcome_admin">Welcome Admin</string>
    <string name="edit_products">Edit Products</string>
    <string name="check_new_orders">Check New Orders</string>
    <string name="logout">Logout</string>
    <string name="new_orders">New Orders</string>
    <string name="products">Products</string>
    <string name="total_price">Total Price:</string>
    <string name="congratulations_your_order_has_been_placed_it_will_be_verified_soon">Congratulations, your order has been placed! It will be verified soon!</string>
    <string name="go_to_checkout">Go to Checkout</string>
    <string name="please_enter_your_shipment_details">Please enter your Shipment Details</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="enter_your_city">Enter Your City</string>
    <string name="confirm">Confirm</string>
    <string name="logo">Logo</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="i_am_an_admin">I am an Admin?</string>
    <string name="i_am_not_an_admin">I am not an Admin?</string>
    <string name="find_discover_choose_and_buy" translatable="false">Find, Discover, Choose and Buy</string>
    <string name="already_have_an_account_login">Already have an Account? Login</string>
    <string name="join_now">Join Now</string>
    <string name="want_to_become_a_seller">Want to become a Seller?</string>
    <string name="product_name">Product Name</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>
    <string name="reset_password">Reset Password</string>
    <string name="please_enter_your_phone_number">Please Enter Your Phone Number</string>
    <string name="choose_and_answer_your_security_question">Choose and Answer your Security Question</string>
    <string name="where_your_parents_have_met_first_time">Where your parents have met first time?</string>
    <string name="who_is_your_favourite_superhero">Who is your favourite superhero?</string>
    <string name="verify">Verify</string>
    <string name="search">Search</string>
    <string name="add_product">Add Product</string>
    <string name="add_new_product">Add new Product</string>
    <string name="my_products">My Products</string>
    <string name="seller_login_form">Seller Login Form</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="seller_registration_form">Seller Registration Form</string>
    <string name="enter_your_phone">Enter your Phone</string>
    <string name="enter_your_business_address">Enter your Business Address</string>
    <string name="register">Register</string>
    <string name="user_name">User Name</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="close">Close</string>
    <string name="update">Update</string>
    <string name="change_profile_image">Change Profile Image</string>
    <string name="enter_your_full_name">Enter your Full Name</string>
    <string name="set_security_questions">Set Security Questions</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="address_city">Address, City</string>
    <string name="date_time">Date Time</string>
    <string name="show_products">Show Products</string>
    <string name="product_status">Product Status</string>


</resources>