<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Seller.SellerRegistrationActivity">

    <ImageView
        android:id="@+id/img_seller_reg"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/seller"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/title_seller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_seller_reg"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/seller_registration_form"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/seller_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/title_seller"
        android:hint="@string/enter_your_name"
        android:inputType="text"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/seller_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/seller_name"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:hint="@string/enter_your_phone"
        android:inputType="phone"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/seller_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/seller_phone"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        />


    <EditText
        android:id="@+id/seller_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/seller_email"
        android:hint="@string/enter_your_business_address"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/seller_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/seller_address"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:textSize="16sp" />

    <Button
        android:id="@+id/seller_register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/seller_password"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/seller_alrd_registered_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@android:color/white"
        android:text="@string/already_have_an_account"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:textColor="@android:color/holo_green_dark"
        />
</RelativeLayout>