<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Buyer.ResetPasswordActivity">

    <RelativeLayout
        android:id="@+id/reset_password_rel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/design_default_color_primary_dark"
        android:layout_alignParentTop="true"
        >

        <TextView
            android:id="@+id/reset_password_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/reset_password"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <EditText
        android:id="@+id/find_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_design"
        android:padding="14dp"
        android:layout_below="@id/reset_password_rel"
        android:layout_margin="15dp"
        android:hint="@string/please_enter_your_phone_number"
        />

    <TextView
        android:id="@+id/title_questions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_and_answer_your_security_question"
        android:gravity="center"
        android:layout_below="@id/find_phone_number"
        android:textSize="26sp"
        android:layout_marginTop="35dp"
        />

    <EditText
        android:id="@+id/question_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_design"
        android:padding="14dp"
        android:layout_below="@id/title_questions"
        android:layout_margin="15dp"
        android:hint="@string/where_your_parents_have_met_first_time"
        />

    <EditText
        android:id="@+id/question_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_design"
        android:padding="14dp"
        android:layout_below="@id/question_1"
        android:layout_margin="15dp"
        android:hint="@string/who_is_your_favourite_superhero"
        />

    <Button
        android:id="@+id/verify_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttons"
        android:padding="14dp"
        android:layout_below="@id/question_2"
        android:layout_margin="15dp"
        android:text="@string/verify"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        />

</RelativeLayout>