<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@color/design_default_color_primary_dark">

        <TextView
            android:id="@+id/order_user_name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginStart="2dp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/order_phone_number"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textAlignment="viewEnd"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="2dp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/order_total_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_price"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_below="@id/order_phone_number"
            android:gravity="center"
            android:layout_marginTop="25dp"
            />

        <TextView
            android:id="@+id/order_address_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address_city"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_below="@id/order_total_price"
            android:gravity="center"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/order_date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_time"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_below="@id/order_address_city"
            android:gravity="center"
            android:layout_marginTop="10dp"
            />

        <Button
            android:id="@+id/show_products_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/order_date_time"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/show_products"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@color/white"
            />

    </RelativeLayout>

</RelativeLayout>