<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Seller.SellerLoginActivity">

    <ImageView
        android:id="@+id/img_seller_log"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/sellerlogin"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/title_seller_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seller_login_form"
        android:gravity="center"
        android:layout_below="@id/img_seller_log"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@android:color/holo_blue_light"
        />

    <EditText
        android:id="@+id/seller_email_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/title_seller_log"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/seller_password_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/seller_email_log"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:textSize="16sp" />

    <Button
        android:id="@+id/seller_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/seller_password_log"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:backgroundTint="@android:color/holo_blue_dark" />

</RelativeLayout>