<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="20dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    app:cardElevation="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/product_name_seller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/design_default_color_primary"/>

        <ImageView
            android:id="@+id/product_image_seller"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/product_name_seller"
            android:layout_marginTop="2dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/product_price_seller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_image_seller"
            android:text="@string/product_price"
            android:layout_marginTop="2dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/design_default_color_primary_dark"/>

        <TextView
            android:id="@+id/product_description_seller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_price_seller"
            android:text="@string/product_description"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/design_default_color_primary_dark"/>

        <TextView
            android:id="@+id/product_state_seller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                android:layout_below="@id/product_description_seller"
            android:text="@string/product_status"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/design_default_color_primary_dark"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>