<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginBottom="5dp"
    app:cardElevation="15dp"
    tools:context=".Admin.AdminCrudProductsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/crud_product_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="2dp"
            android:scaleType="centerCrop" />

        <EditText
            android:id="@+id/crud_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/crud_product_image"
            android:hint="@string/product_price"
            android:layout_marginTop="2dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:background="@drawable/input_design"
            android:padding="12dp"
            android:layout_margin="5dp"
            android:textColor="@color/design_default_color_primary_dark"/>

        <EditText
            android:id="@+id/crud_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/crud_product_name"
            android:hint="@string/product_price"
            android:layout_marginTop="2dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:background="@drawable/input_design"
            android:padding="12dp"
            android:layout_margin="5dp"
            android:textColor="@color/design_default_color_primary_dark"/>

        <EditText
            android:id="@+id/crud_product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/crud_product_price"
            android:hint="@string/product_description"
            android:textAlignment="center"
            android:textSize="16sp"
            android:background="@drawable/input_design"
            android:padding="12dp"
            android:layout_margin="5dp"
            android:textColor="@color/design_default_color_primary_dark"/>

        <Button
            android:id="@+id/crud_product_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/crud_product_description"
            android:text="@string/apply_changes"
            android:textAlignment="center"
            android:textSize="18sp"
            android:background="@drawable/buttons"
            android:padding="12dp"
            android:layout_margin="5dp"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/delete_product_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/crud_product_btn"
            android:text="@string/delete_product"
            android:textAlignment="center"
            android:layout_margin="30dp"
            android:textSize="18sp"
            android:background="@drawable/buttons"
            android:padding="12dp"
            android:textColor="@color/white"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>